fix: remove share button from team name, prevent name wrapping on mobile

--- a/client/src/pages/TeamPage.css
+++ b/client/src/pages/TeamPage.css
@@ -61,6 +61,7 @@
   font-size: 28px;
   font-weight: 800;
   color: var(--text);
+  white-space: nowrap;
   line-height: 1.1;
 }
 
